# EvoNet

./: pyproject.toml  run.py  run_test.py
data/djia30/: events.npy  series.npy
model/: gmm_djia30_30.state_model
model/ETNet_djia30_30/: clf.model  model.index
model_core/: config.py
model_core/models/EvoNet/: evonet.py  evonet_tsc.py
model_core/state_model/: cluster.py  saxword.py  shaplets.py
